--- a/index.html
+++ b/index.html
@@ -294,6 +294,9 @@
         if (currentDataSource) {
           updateGraph(playerCount, currentDataSource);
         }
+        else {
+          updateGraph(playerCount, data)
+        }
       });
 
       // Initialize the graph with all players shown
