--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           updateGraph(playerCount, currentDataSource);
         }
         else {
-          updateGraph(playerCount, data)
+          updateGraph(playerCount, data);
         }
       });
 
